projects/lungmen.akn/dist/apps/actual-budget/apps.v1.StatefulSet.actual-budget.yaml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  labels:
    app.kubernetes.io/instance: actual-budget
    app.kubernetes.io/name: actual-budget
  name: actual-budget
  namespace: actual-budget
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/instance: actual-budget
      app.kubernetes.io/name: actual-budget
  serviceName: actual-budget
  template:
    metadata:
      annotations:
        backup.velero.io/backup-volumes: persistent
      labels:
        app.kubernetes.io/instance: actual-budget
        app.kubernetes.io/name: actual-budget
    spec:
      automountServiceAccountToken: false
      containers:
      - env:
        - name: ACTUAL_CONFIG_PATH
          value: /app/config.json
        - name: ACTUAL_OPENID_ENFORCE
          value: "false"
        - name: ACTUAL_TOKEN_EXPIRATION
          value: openid-provider
        image: oci.chezmoi.sh/ghcr.io/actualbudget/actual-server:26.9.0
        livenessProbe:
          httpGet:
            path: /
            port: http
        name: actual-budget
        ports:
        - containerPort: 5006
          name: http
          protocol: TCP
        readinessProbe:
          httpGet:
            path: /
            port: http
        resources:
          limits:
            memory: 128Mi
          requests:
            cpu: 100m
            memory: 128Mi
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
            - ALL
          privileged: false
          readOnlyRootFilesystem: true
          seccompProfile:
            type: RuntimeDefault
        volumeMounts:
        - mountPath: /data
          name: persistent
        - mountPath: /app/config.json
          name: config
          readOnly: true
          subPath: config.json
      securityContext:
        fsGroup: 38069
        runAsGroup: 38069
        runAsNonRoot: true
        runAsUser: 38069
      volumes:
      - name: config
        secret:
          defaultMode: 384
          secretName: actual-budget-configuration
  volumeClaimTemplates:
  - apiVersion: v1
    kind: PersistentVolumeClaim
    metadata:
      labels:
        app.kubernetes.io/instance: actual-budget
        app.kubernetes.io/name: actual-budget
      name: persistent
    spec:
      accessModes:
      - ReadWriteOnce
      resources:
        requests:
          storage: 1Gi
      storageClassName: proxmox-lvmthin-ext4-retain
