projects/lungmen.akn/dist/apps/actual-budget/core.v1.Service.actual-budget.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/instance: actual-budget
    app.kubernetes.io/name: actual-budget
  name: actual-budget
  namespace: actual-budget
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: http
  selector:
    app.kubernetes.io/instance: actual-budget
    app.kubernetes.io/name: actual-budget
