projects/lungmen.akn/dist/apps/actual-budget/gateway.networking.k8s.io.v1.HTTPRoute.actual-budget-websecure.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  annotations:
    link.argocd.argoproj.io/external-link: https://budget.chezmoi.sh
  labels:
    app.kubernetes.io/instance: actual-budget
    app.kubernetes.io/name: actual-budget
  name: actual-budget-websecure
  namespace: actual-budget
spec:
  hostnames:
  - budget.chezmoi.sh
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: external
    namespace: kube-system
    sectionName: chezmoi.sh-websecure
  rules:
  - backendRefs:
    - group: ""
      kind: Service
      name: actual-budget
      port: 80
      weight: 1
    matches:
    - path:
        type: PathPrefix
        value: /
