projects/lungmen.akn/dist/apps/actual-budget/cilium.io.v2.CiliumNetworkPolicy.allow-actual-budget-from-envoy-gateway.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  annotations:
    policy.networking.k8s.io/description: |
      Allows Envoy Gateway to route traffic to Actual Budget application.
  labels:
    app.kubernetes.io/instance: actual-budget
    app.kubernetes.io/name: actual-budget
  name: allow-actual-budget-from-envoy-gateway
  namespace: actual-budget
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: actual-budget
  ingress:
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: envoy-gateway-system
      toPorts:
        - ports:
            - port: "5006"
              protocol: TCP
